<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2B2A2A">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#000000"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#353434"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="@string/Jace"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#1C4035"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="@string/Clary"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#610606"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="@string/Alec"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#49024A"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="@string/izzy"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#6C4317"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="@string/simon"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="#282B32"
                android:fontFamily="@font/almendra"
                android:gravity="center"
                android:text="@string/Magnus"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>